--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "mock-server": "npx json-server --watch ./db.json -p 4001 -d 1000"
   },
   "dependencies": {
     "next": "latest",
